--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>이상한 사이트</title>
+    <title><h2>이상한 사이트</h2></title>
   </head>
   <body>
 
