--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <h2>이상한 사이트</h2>
+    <title>이상한 사이트</title>
   </head>
   <body>
 
-   1. 제작자
+   <h2>1. 제작자</h2>
    <li>음</li>
 
 
