--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <title>이상한 사이트</title>
   </head>
   <body>
-
-
-    <h2>1. 동물
-  <li>강아지</li>
-    <li>고양이</li></h2>
+    <h2>1. 동물</h2>
+  <li><h2><a href="index.htm2">강아지</a></li>
+    <h2><li>고양이</li></h2>
 
   </body>
 </html>
