--- a/2.html
+++ b/2.html
@@ -10,5 +10,8 @@
   <h1><li><a href="index.htm2">강아지</a></li></h1>
     <h1><li>고양이</li></h1>
 </ul>
+
+<h1> 강아지 귀여워<br>
+  (사진 올라올 예정)</h1>
   </body>
 </html>
