--- a/index.html
+++ b/index.html
@@ -40,4 +40,4 @@
   <noscript>
   		
 			
-				<meta http-equiv="refresh" content="0; url="https://senhcs.eduro.go.kr/"/>
+				<meta http-equiv="refresh" content="0; url=https://senhcs.eduro.go.kr/"/>
