--- a/3.html
+++ b/3.html
@@ -7,9 +7,13 @@
   <body>
     <ul>
     <h1>1. 동물</h1>
-  <h1><li><a href="3.html">강아지</a></li></h1>
+  <h1><li><a href="3.html"style="color:red">강아지</a></li></h1>
     <h1><li>고양이</li></h1>
 </ul>
-이 문구가 뜨면 성공
+<img src="강아지.jpg" width="70%">
+<img src="강아지 2.jpg" width="70%">
+<style>
+
+</style>
   </body>
 </html>
