--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
   </head>
   <body>
     <ul>
+      <h1>홈</h1>
     <h1>1. 동물</h1>
   <h1><li><a href="3.html">강아지</a></li></h1>
     <h1><li>고양이</li></h1>
+    <H2>이 사이트는 그냥 동물사진 올리는 사이트임!</H2>
+    <br>
+    <H5>마지막 업데이트 : 2020.10.05</H5>
+
 </ul>
+<style>
+
+</style>
   </body>
 </html>
