--- a/3.html
+++ b/3.html
@@ -6,12 +6,12 @@
   </head>
   <body>
     <ul>
+      <h1><li><a href="index.html">홈</a></li></h1>
     <h1>1. 동물</h1>
   <h1><li><a href="3.html"style="color:red">강아지</a></li></h1>
     <h1><li>고양이</li></h1>
 </ul>
 <img src="강아지.jpg" width="70%">
-<img src="강아지 2.jpg" width="70%">
 <style>
 
 </style>
